--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,10 @@
-Contactenos
-Contactenos
-Contactenos
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Contácto</title>
+</head>
+<body>
+	
+</body>
+</html>
