--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hola
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Inicio</title>
+</head>
+<body>
+	
+</body>
+</html>
